feat: Gestion du formulaire de contact

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=4f14412eef39e2747d76d1ce3a8c80e2
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
