--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "jQuery": "^1.7.4",
         "select2": "^4.0.13"
     }
 }
