--- a/.env
+++ b/.env
@@ -14,14 +14,14 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=4f14412eef39e2747d76d1ce3a8c80e2
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://localhost:1025
+ ##MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,5 +29,5 @@ APP_SECRET=4f14412eef39e2747d76d1ce3a8c80e2
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/masuperagence_dev?serverVersion=5.7
+#DATABASE_URL=mysql://root:@127.0.0.1:3306/masuperagence_dev?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
