--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/google-mailer": "5.0.*",
         "symfony/http-client": "5.0.*",
         "symfony/intl": "5.0.*",
         "symfony/mailer": "5.0.*",
@@ -23,6 +24,7 @@
         "symfony/orm-pack": "*",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
+        "symfony/sendgrid-mailer": "5.0.*",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.0.*",
         "symfony/translation": "5.0.*",
